<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg">




            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/secondPrimary"
                android:visibility="gone"
                android:layout_gravity="center_vertical|center_horizontal"
                />


            <LinearLayout
                android:id="@+id/tryAgainLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible"
                android:layout_gravity="center"
                >

                <TextView
                    android:id="@+id/tryAgainMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Internet Connection"
                    android:textColor="#BA000000"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/tryAgainButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Try Again"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


                <include
                    android:id="@+id/toolbar"
                    layout="@layout/common_toolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/image_slider_fl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/secondPrimary">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/add_slider"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/secondPrimary"
                        app:iss_auto_cycle="true"
                        app:iss_period="2000"
                        app:iss_delay="0"
                        app:iss_selected_dot="@drawable/selected_dot"
                        app:iss_unselected_dot="@drawable/unnseleted_dot"/>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/card_round"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintTop_toBottomOf="@+id/image_slider_fl">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_round"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">

                            <LinearLayout
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:paddingHorizontal="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/username_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/username"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />


                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="6dp"
                                    android:gravity="start|top"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/price_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="top"
                                        android:text="@string/price_txt"
                                        android:textColor="@color/white"
                                        android:textSize="10sp" />


                                    <TextView
                                        android:id="@+id/userPrice_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="4dp"
                                        android:layout_toEndOf="@+id/price_tv"
                                        android:text="@string/dummy_price"
                                        android:textColor="@color/white"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />


                                </RelativeLayout>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:src="@drawable/database" />


                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="6dp"
                                    android:gravity="end|top"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/point_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="start"
                                        android:text="@string/yourpoint"
                                        android:textColor="@color/white"
                                        android:textSize="14sp" />


                                    <TextView
                                        android:id="@+id/userPoint_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="4dp"
                                        android:layout_toEndOf="@+id/point_tv"
                                        android:text="@string/zero"
                                        android:textColor="@color/white"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />


                                </RelativeLayout>


                            </LinearLayout>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"

                            >

                            <FrameLayout
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/card_left_bg"
                                android:elevation="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:paddingVertical="6dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/add" />

                                    <TextView
                                        android:id="@+id/add_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp"
                                        android:gravity="start"
                                        android:text="@string/isri"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="14sp" />


                                </LinearLayout>


                            </FrameLayout>

                            <FrameLayout
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/card_white_bg"
                                android:elevation="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:paddingVertical="6dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/rocket" />

                                    <TextView
                                        android:id="@+id/transfer_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp"
                                        android:gravity="start"
                                        android:text="@string/transfer"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="14sp" />


                                </LinearLayout>


                            </FrameLayout>

                            <FrameLayout
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/card_right_bg"
                                android:elevation="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:paddingVertical="6dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/stack_money" />

                                    <TextView
                                        android:id="@+id/rp_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp"
                                        android:gravity="start"
                                        android:text="@string/tarik_tunai"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="14sp" />


                                </LinearLayout>


                            </FrameLayout>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:padding="2dp">


                            <TextView
                                android:id="@+id/user_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_toEndOf="@+id/price_tv"
                                android:background="@drawable/card_round"
                                android:paddingHorizontal="15dp"
                                android:paddingVertical="4dp"
                                android:text="@string/dummy_name"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        <include layout="@layout/bottom_sheet" />



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>